--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "devDependencies": {
         "typescript": "^5",
         "@types/node": "^20",
+        "@tauri-apps/api": "^1.5.3",
         "@typescript-eslint/parser": "^7.4.0",
         "@typescript-eslint/eslint-plugin": "^7.4.0",
 
