--- a/tauri_rust/Cargo.toml
+++ b/tauri_rust/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tauri = { version = "1.6.6" }
+serde_json = "1.0"
+tauri = { version = "1.6.6", features = ["cli"]}
+serde = { version = "1.0", features = ["derive"] }
