--- a/egui/Cargo.toml
+++ b/egui/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+reqwest = {version = "0.12.12", features = ["blocking", "json"]}
+semver = "1.0.24"
+
 cirrus_theming = { workspace = true }
 
+egui-notify = {workspace = true}
 egui = {workspace = true}
 toml = {workspace = true}
 serde = {workspace = true, features = ["derive"]}
