--- a/updates/Cargo.toml
+++ b/updates/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = {version = "0.12.12", features = ["blocking", "json"]}
 semver = "1.0.24"
-
-serde = {workspace = true, features = ["derive"]}
+reqwest = {version = "0.12.12", features = ["blocking", "json"]}
+serde = {version = "1.0", features = ["derive"]}
