--- a/egui/Cargo.toml
+++ b/egui/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 [dependencies]
 cirrus_theming = { path = "../theming"}
 
-toml = "0.8.20"
-egui = { version = ">=0.31.1" }
+toml = "0.8"
+egui = { version = "0.31" }
 serde = { version = "1.0", features = ["derive"] }
