--- a/egui/Cargo.toml
+++ b/egui/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [dependencies]
 cirrus_theming = { path = "../theming"}
 
+log = "0.4"
 toml = "0.8"
+textwrap = "0.16"
+egui-notify = "0.19"
 egui = { version = "0.31" }
 serde = { version = "1.0", features = ["derive"] }
