feat: walk and parse template config, add `Section` to allow construction of settings panel and add `config_key_path` macro #75

--- a/egui/Cargo.toml
+++ b/egui/Cargo.toml
@@ -9,6 +9,7 @@ cirrus_theming = { path = "../theming"}
 
 log = "0.4"
 toml = "0.8"
+toml_edit = "0.23"
 egui = { version = "0.32" }
 textwrap = "0.16"
 egui-notify = { git = "https://github.com/THEGOLDENPRO/egui-notify-0.20.0.git" }
