feat, refactor!: add `cirrus_path`, add versioning to `cirrus_config`, begin implementation of `ConfigManager` and improve `CError` flexibility with `dyn CError`.

--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+cirrus_path = { path = "../path"}
+cirrus_error = { path = "../error"}
+
+log = "0.4"
+toml = "0.9"
+serde = {version = "1.0", features = ["derive"]}
