--- a/egui/Cargo.toml
+++ b/egui/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-cirrus_error = { path = "../error"}
+cirrus_error = { path = "../error" }
 cirrus_config = { path = "../config" }
-cirrus_theming = { path = "../theming"}
+cirrus_theming = { path = "../theming" }
+cirrus_path = { path = "../path" }
 
 log = "0.4"
 toml = "0.9"
