feat: add `CTK_THEME` env var for overriding app theme and add `version` to theme.toml template #15

--- a/assets/theme.example.toml
+++ b/assets/theme.example.toml
@@ -1,5 +1,6 @@
 # This is an example of the "theme.toml" file.
-dark_mode = false
+version = 1
+dark_mode = false # theme is a light mode theme
 
 # A cheerful and colourful colour pallet.
 [pallet]
