--- a/theming/Cargo.toml
+++ b/theming/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+cirrus_path = { path = "../path" }
 cirrus_error = { path = "../error" }
 
+log = "0.4"
+toml = "0.9"
 serde = { version = "1.0", features = ["derive"] }
