--- a/assets/theme.example.toml
+++ b/assets/theme.example.toml
@@ -1,10 +1,11 @@
 # This is an example of the "theme.toml" file.
 version = 1
-dark_mode = false # theme is a light mode theme
+dark_mode = false # theme is a light mode theme.
 
 # A cheerful and colourful colour pallet.
 [pallet]
 primary = "#F5FFFA" # Mint Cream
+interactive = "#F5CFC9"
 surface = "#F4C2C2" # Mimi Pink
 text = "#423939"
 accent = "#FBAED2" # Lavender Pink
